--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ langchain = "^0.0.335"
 sentence-transformers = "^2.2.2"
 websockets = "^12.0"
 ruptures = "^1.1.8"
+ffmpeg-python = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
