--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,10 @@ MANIFEST
 # Data
 data/
 
+# models
+models/
+
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -146,6 +150,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.python-version
 
 # Spyder project settings
 .spyderproject
