--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "backend"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 fastapi = "^0.104.0"
 uvicorn = "^0.23.2"
 pydantic = "^2.4.2"
@@ -22,6 +22,10 @@ sentence-transformers = "^2.2.2"
 websockets = "^12.0"
 ruptures = "^1.1.8"
 ffmpeg-python = "^0.2.0"
+vosk = "^0.3.45"
+# Commented out Whisper dependencies as we're replacing with Vosk
+# openai-whisper = {git = "https://github.com/openai/whisper.git"}
+# whisper = "^1.1.10"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
@@ -31,6 +35,11 @@ isort = "^5.12.0"
 flake8 = "^6.1.0"
 pre-commit = "^3.5.0"
 mypy = "^1.6.1"
+
+[tool.poetry.scripts]
+api = "backend.app.main:run_api"
+worker = "backend.core.worker.run:start_worker"
+run-all = "backend.scripts.run_pipeline:start_pipeline"
 
 [build-system]
 requires = ["poetry-core"]
@@ -47,7 +56,7 @@ line_length = 88
 multi_line_output = 3
 
 [tool.mypy]
-python_version = "3.10"
+python_version = "3.9.19"
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
 check_untyped_defs = true
